- Added hydra test coverage for thin client smart connector mode testing